finish product-demo

--- a/product-demo/index.html
+++ b/product-demo/index.html
@@ -31,22 +31,85 @@
     <div class="header">
         <div class="header-text-box">
                 <h1 class="heading-primary"> Product Demo </h1>
-                <p class="description"> Lorem ipsum dolor sit amet consect hia smiaio.</p>
-                <button class="btn"> Comming Soon</button>
+                <p class="heading-primary-sub u-margin-top-0"> Lorem ipsum dolor sit amet consect hia smiaio.</p>
+                <button class="btn u-margin-top-1"> Comming Soon</button>
         </div>
     </div>
-    <div class="container">
-        <h2 class="heading-secondary"> Product One </h2>
-        <button class="btn"> 123 </button>
-    </div>
-    <div class="container">
-            <h2 class="heading-secondary"> Cards </h2>
-            <button class="btn"> 123 </button>
+    <div class="row">
+        <div class="col-4">
+            <img src="./assets/typewriter-grey.jpg" alt="" class="product-image" style="width:100%">
         </div>
-    <div class="container">
-        <h2 class="heading-secondary"> Navigation Bar </h2>
-        <button class="btn"> 123 </button>
+        <div class="col-6">
+            <h2 class="heading-secondary u-margin-top-18"> Product One </h2>
+            <div class="product-text-box u-margin-top-1 ">
+                    <p class="description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. A, architecto quis numquam dolores amet porro quas officia exercitationem veritatis aperiam ducimus tempore tempora magni sequi, repudiandae voluptas! Excepturi, vel dolores? Lorem ipsum dolor sit amet consea!</p>
+            </div>
+        </div>
     </div>
+    <div class="row u-bg-dark">
+        <div class="col-6">
+            <h2 class="heading-secondary u-margin-top-18"> Product Two </h2>
+            <div class="product-text-box u-margin-top-1 ">
+                    <p class="description--white"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora rem minus magni suscipit esse quasi molestias sunt. Nostrum enim nemo possimus, beatae, minima doloribus quod quo nisi fugiat ad nesciunt. </p>
+            </div>
+        </div>
+        <div class="col-4">
+                <img src="./assets/smartphone-white.png" alt="" class="product-image" style="height:60%">
+        </div>
+    </div>
+    <div class="row u-margin-side-10">
+        <div class="col-3">
+            <div class="card">
+                <h3 class="heading-feature"> Feature One </h3>
+                <p class="paragraph-feature"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis expedita velit rerum perspiciatis pariatur perferendis culpa saepe totam quod voluptatibus dignissimos error ipsa, ratione volup.</p>
+                <button class="btn btn--active u-margin-bt-2 "> FREE </button>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="card">
+                <h3 class="heading-feature"> Feature Two </h3>
+                <p class="paragraph-feature"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, ex tenetur, sit illum nemo officiis atque voluptate cumque odit placeat a ipsa aut molestias aperiam quos impedit, rerum amet at.</p>
+                <button class="btn u-margin-bt-2 "> 80$ Monthly </button>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="card">
+                <h3 class="heading-feature"> Feature Three </h3>
+                <p class="paragraph-feature"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat necessitatibus natus perspiciatis. Reprehenderit nemo quasi aperiam, dolores adipisci, et beatae provident deserunt neque accus. </p>
+                <button class="btn u-margin-bt-2 "> 120$ Monthly </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="col-3">
+            <div class="footer-note">
+                <h4 class="footer-heading"> Features </h4>
+                <a class="footer-link" href="#">Feature One <br> </a>
+                <a class="footer-link" href="#">Feature Two<br></a>
+                <a class="footer-link" href="#">Feature Three<br></a>
+                <a class="footer-link" href="#">Feature Something<br></a>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="footer-note">
+                <h4 class="footer-heading"> Resources <br></h4>
+                <a class="footer-link" href="#"> Website <br></a>
+                <a class="footer-link" href="#"> Partner <br></a>
+                <a class="footer-link" href="#"> Government<br> </a>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="footer-note">
+                <h4 class="footer-heading"> About<br> </h4>
+                <a class="footer-link" href="#">Team<br></a>
+                <a class="footer-link" href="#">Us<br></a>
+                <a class="footer-link" href="#">History<br></a>
+                <a class="footer-link" href="#">Document<br></a>
+            </div>
+        </div>
+    </div>
+
     <script>
         window.onscroll = function() {scrollFunction()};
         function scrollFunction() {
