--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -8,49 +8,93 @@
     <title>Tool-Kits</title>
 </head>
 <body>
-    <h1 class="heading-primary"> Tool Kits </h1>
-    <div class="container">
-        <div class="card"> 
-            <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
-            <h3 class="card__heading"> Normal Card </h3>
-            <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
-        </div>
-        <div class="card-flip">
-            <div class="card-flip--inner--horizontal">
-                <div class="card-flip__front">
-                    <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
-                    <h3 class="card__heading"> Horizontal Flip Card  </h3>
-                    <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
-                </div>
-                <div class="card-flip__back card-flip__back--horizontal">
-                        <img class="card-flip__back__image" src="./assets/headphones.png" alt="" style="width:50%">
+    <main class="main">
+        <h1 class="heading-primary"> Tool Kits </h1>
+        <img onclick="next(-1)" src="./assets/left-arrow.png" alt="" class="arrow arrow--left" style="width: 4rem">
+        <img onclick="next(1)" src="./assets/right-arrow.png" alt="" class="arrow arrow--right" style="width: 4rem">
+        <div class="container">
+            <div class="show card">
+                <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
+                <h3 class="card__heading"> Normal Card </h3>
+                <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
+            </div>
+            <div class="show card-flip">
+                <div class="card-flip--inner--horizontal">
+                    <div class="card-flip__front">
+                        <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
+                        <h3 class="card__heading"> Horizontal Flip Card  </h3>
+                        <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
+                    </div>
+                    <div class="card-flip__back card-flip__back--horizontal">
+                            <img class="card-flip__back__image" src="./assets/headphones.png" alt="" style="width:50%">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="card-flip"> 
-            <div class="card-flip--inner--vertical">
-                <div class="card-flip__front">
+            <div class="show card-flip"> 
+                <div class="card-flip--inner--vertical">
+                    <div class="card-flip__front">
+                        <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
+                        <h3 class="card__heading"> Vertical Flip Card  </h3>
+                        <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
+                    </div>
+                    <div class="card-flip__back card-flip__back--vertical">
+                        <img class="card-flip__back__image" src="./assets/headphones.png" alt="" style="width:50%">
+                    </div>  
+                </div>
+            </div>
+            <div class="show card card-fade"> 
+                <div class="card-fade__front">
                     <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
-                    <h3 class="card__heading"> Vertical Flip Card  </h3>
+                    <h3 class="card__heading"> Fade Card </h3>
                     <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
                 </div>
-                <div class="card-flip__back card-flip__back--vertical">
-                    <img class="card-flip__back__image" src="./assets/headphones.png" alt="" style="width:50%">
+                <div class="card-fade__back">
+                    <div class="image-box">
+                        <img class="card-fade__image" src="./assets/headphones.png" alt="" style="width:50%">
+                    </div>
                 </div>  
             </div>
         </div>
-        <div class="card card-fade"> 
-            <div class="card-fade__front">
-                <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
-                <h3 class="card__heading"> Fade Card </h3>
-                <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
-            </div>
-            <div class="card-fade__back">
-                <div class="image-box">
-                    <img class="card-fade__image" src="./assets/headphones.png" alt="" style="width:50%">
-                </div>
-            </div>  
-        </div>
-    </div>
+    </main>
+    
+    <script>
+
+        let index = 0;
+        let divs = document.getElementsByClassName("show");
+
+        // defualt: display the first element
+        for (i = 1; i < divs.length; i++) {
+            divs[i].style.display = "none";  
+            // divs[i].style.opacity = "0";  
+        }
+
+        document.onkeydown = (e) => {
+            if (e.key == "ArrowLeft") {
+                next(-1);
+            } else if (e.key == "ArrowRight") {
+                next(1);
+            }
+        }
+
+        const next = (direction) => {
+            index += direction;
+            if (index >= divs.length) {
+                index = 0;
+            } else if (index < 0) {
+                index = divs.length - 1;
+            }
+            showDivs(index);
+        }
+
+        const showDivs = (index) => {
+            for (i = 0; i < divs.length; i++) {
+                divs[i].style.display = "none";  
+                // divs[i].style.opacity = "0";  
+            }
+            divs[index].style.display = "block";
+            // divs[i].style.opacity = "1";  
+        }
+    
+    </script>
 </body>
 </html>
