--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -8,10 +8,22 @@
     <title>Tool-Kits</title>
 </head>
 <body>
-    <main class="main">
-        <h1 class="heading-primary"> Tool Kits </h1>
+    <div class="nav">
+        <div class="nav-icon" onclick="navClick(this)">
+            <div class="menu-icon"></div>
+            <div class="menu-icon"></div>
+            <div class="menu-icon"></div>
+        </div>
+    </div>
+    <div class="nav-menu-overlay">
+
+    </div>
+    <div class="img-container">
         <img onclick="next(-1)" src="./assets/left-arrow.png" alt="" class="arrow arrow--left" style="width: 4rem">
         <img onclick="next(1)" src="./assets/right-arrow.png" alt="" class="arrow arrow--right" style="width: 4rem">
+    </div>
+    <main class="main">
+        <!-- <h1 class="heading-primary"> Tool Kits </h1> -->
         <div class="container">
             <div class="show card">
                 <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
@@ -59,44 +71,7 @@
     <div class="pagination">
         
     </div>
-    <script>
 
-        let index = 0;
-        let divs = document.getElementsByClassName("show");
-
-        // defualt: display the first element
-        for (i = 1; i < divs.length; i++) {
-            divs[i].style.display = "none";  
-            // divs[i].style.opacity = "0";  
-        }
-
-        document.onkeydown = (e) => {
-            if (e.key == "ArrowLeft") {
-                next(-1);
-            } else if (e.key == "ArrowRight") {
-                next(1);
-            }
-        }
-
-        const next = (direction) => {
-            index += direction;
-            if (index >= divs.length) {
-                index = 0;
-            } else if (index < 0) {
-                index = divs.length - 1;
-            }
-            showDivs(index);
-        }
-
-        const showDivs = (index) => {
-            for (i = 0; i < divs.length; i++) {
-                divs[i].style.display = "none";  
-                // divs[i].style.opacity = "0";  
-            }
-            divs[index].style.display = "block";
-            // divs[i].style.opacity = "1";  
-        }
-    
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
