--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -16,7 +16,9 @@
         </div>
     </div>
     <div class="nav-menu-overlay">
-
+        <div class="nav-menu">
+            <h1 class="heading-primary"> Storage Room </h1>
+        </div>
     </div>
     <div class="img-container">
         <img onclick="next(-1)" src="./assets/left-arrow.png" alt="" class="arrow arrow--left" style="width: 4rem">
@@ -25,12 +27,12 @@
     <main class="main">
         <!-- <h1 class="heading-primary"> Tool Kits </h1> -->
         <div class="container">
-            <div class="show card">
+            <div class="show-cards card">
                 <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
                 <h3 class="card__heading"> Normal Card </h3>
                 <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
             </div>
-            <div class="show card-flip">
+            <div class="show-cards card-flip">
                 <div class="card-flip--inner--horizontal">
                     <div class="card-flip__front">
                         <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
@@ -42,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <div class="show card-flip"> 
+            <div class="show-cards card-flip"> 
                 <div class="card-flip--inner--vertical">
                     <div class="card-flip__front">
                         <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
@@ -54,7 +56,7 @@
                     </div>  
                 </div>
             </div>
-            <div class="show card card-fade"> 
+            <div class="show-cards card card-fade"> 
                 <div class="card-fade__front">
                     <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
                     <h3 class="card__heading"> Fade Card </h3>
@@ -69,7 +71,7 @@
         </div>
     </main>
     <div class="pagination">
-        
+        <!-- add by js -->
     </div>
 
     <script src="js/script.js"></script>
