nav-menu finish

--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -18,6 +18,9 @@
     <div class="nav-menu-overlay">
         <div class="nav-menu">
             <h1 class="heading-primary"> Storage Room </h1>
+            <p class="nav-text" onclick="choose('cards')">Cards</p>
+            <p class="nav-text" onclick="choose('buttons')">Buttons</p>
+            <p class="nav-text" onclick="choose('navs')">Navbars</p>
         </div>
     </div>
     <div class="img-container">
