menu links to actual component changes

--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -29,7 +29,7 @@
     </div>
     <main class="main">
         <!-- <h1 class="heading-primary"> Tool Kits </h1> -->
-        <div class="container">
+        <div class="container" id="card-container">
             <div class="show-cards card">
                 <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
                 <h3 class="card__heading"> Normal Card </h3>
@@ -72,12 +72,12 @@
                 </div>  
             </div>
         </div>
-        <div class="button-container">
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-            <button class="btn"></button>
-        </div>
+        <!-- <div class="button-container">
+            <button class="btn show-buttons"></button>
+            <button class="btn show-buttons"></button>
+            <button class="btn show-buttons"></button>
+            <button class="btn show-buttons"></button>
+        </div> -->
     </main>
     <div class="pagination">
         <!-- add by js -->
