--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -72,12 +72,13 @@
                 </div>  
             </div>
         </div>
-        <!-- <div class="button-container">
+        <div id="button-container">
             <button class="btn show-buttons"></button>
             <button class="btn show-buttons"></button>
             <button class="btn show-buttons"></button>
             <button class="btn show-buttons"></button>
-        </div> -->
+            <button class="btn show-buttons"></button>
+        </div>
     </main>
     <div class="pagination">
         <!-- add by js -->
