begin design button

--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -59,7 +59,7 @@
                     </div>  
                 </div>
             </div>
-            <div class="show-cards card card-fade"> 
+            <div class="show-cards card card-fade">
                 <div class="card-fade__front">
                     <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
                     <h3 class="card__heading"> Fade Card </h3>
@@ -69,12 +69,12 @@
                     <div class="image-box">
                         <img class="card-fade__image" src="./assets/headphones.png" alt="" style="width:50%">
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
-        <div id="button-container">
-            <button class="btn show-buttons"></button>
-            <button class="btn show-buttons"></button>
+        <div class="container" id="button-container">
+            <button class="btn show-buttons"> Normal Button </button>
+            <button class="btn show-buttons"> Enlarge Button </button>
             <button class="btn show-buttons"></button>
             <button class="btn show-buttons"></button>
             <button class="btn show-buttons"></button>
