--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -35,6 +35,18 @@
                 <h3 class="card__heading"> Normal Card </h3>
                 <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
             </div>
+            <div class="show-cards card card-fade">
+                <div class="card-fade__front">
+                    <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
+                    <h3 class="card__heading"> Fade Card </h3>
+                    <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
+                </div>
+                <div class="card-fade__back">
+                    <div class="image-box">
+                        <img class="card-fade__image" src="./assets/headphones.png" alt="" style="width:50%">
+                    </div>
+                </div>
+            </div>
             <div class="show-cards card-flip">
                 <div class="card-flip--inner--horizontal">
                     <div class="card-flip__front">
@@ -59,24 +71,12 @@
                     </div>  
                 </div>
             </div>
-            <div class="show-cards card card-fade">
-                <div class="card-fade__front">
-                    <img src="./assets/airpods.jpeg" alt="" class="card__image" style="width:100%;">
-                    <h3 class="card__heading"> Fade Card </h3>
-                    <p class="card__description"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea necessitatibus eveniet iusto quia qui repudiandae ducimus quam rerum perspiciatis olmun lopem surenom. </p>
-                </div>
-                <div class="card-fade__back">
-                    <div class="image-box">
-                        <img class="card-fade__image" src="./assets/headphones.png" alt="" style="width:50%">
-                    </div>
-                </div>
-            </div>
         </div>
         <div class="container" id="button-container">
             <button class="btn show-buttons"> Normal Button </button>
             <button class="btn show-buttons"> Enlarge Button </button>
-            <button class="btn show-buttons"></button>
-            <button class="btn show-buttons"></button>
+            <button class="btn show-buttons"> Horizontal Prism </button>
+            <button class="btn show-buttons"> Veritcal Prism </button>
             <button class="btn show-buttons"></button>
         </div>
     </main>
