--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Tool-Kits</title>
 </head>
-<body>
+<body id="body">
     <div class="nav">
         <div class="nav-icon" onclick="navClick(this)">
             <div class="menu-icon"></div>
@@ -71,13 +71,12 @@
                     </div>  
                 </div>
             </div>
+            <!-- <div class=""> Prism Card </div> -->
         </div>
         <div class="container" id="button-container">
-            <button class="btn show-buttons"> Normal Button </button>
-            <button class="btn show-buttons"> Enlarge Button </button>
-            <button class="btn show-buttons"> Horizontal Prism </button>
-            <button class="btn show-buttons"> Veritcal Prism </button>
-            <button class="btn show-buttons"></button>
+            <button class="btn btn--normal show-buttons"> Normal Button </button>
+            <button class="btn btn--enlarge show-buttons"> Enlarge Button </button>
+            <button class="btn btn--border show-buttons"> Border Button </button>
         </div>
     </main>
     <div class="pagination">
