--- a/tool-kits/index.html
+++ b/tool-kits/index.html
@@ -77,6 +77,18 @@
             <button class="btn btn--normal show-buttons"> Normal Button </button>
             <button class="btn btn--enlarge show-buttons"> Enlarge Button </button>
             <button class="btn btn--border show-buttons"> Border Button </button>
+            <div class="container--email">
+                <button class="btn btn--email show-buttons"> 
+                    <div class="btn--email__text">
+                        Notify Me 
+                    </div>
+                </button>
+                <div class="container--email__inner">
+                    <input class="email-input" type="text">
+                    <button class="btn--email__inner"> Send </button>
+                </div>
+            </div>
+            
         </div>
     </main>
     <div class="pagination">
